# lmms_video

./: .gitignore  AUTOREGRESSIVE_INTEGRATION.md  batch_calculate_subsets.py  c4_eval_config.yaml  convert_to_parquet.py  count_vision_tokens.py  load_subset_data.py  test_txt_loading.py  text_10_0B_subset_paths.txt  text_1_0B_subset_paths.txt  text_2_0B_subset_paths.txt  text_6_4B_subset_paths.txt  update_paths_to_parquet.py  vision_10_0B_subset_paths.txt  vision_1_0B_subset_paths.txt  vision_2_0B_subset_paths.txt  vision_6_4B_subset_paths.txt
lmms_video/: CLAUDE.md  FAST_SLOW_AUTOREGRESSIVE_README.md  README.md  convert_vidtok_data.py  pyproject.toml  run_experiments.sh  text_10_0B_subset_paths.txt  text_1_0B_subset_paths.txt  text_2_0B_subset_paths.txt  text_6_4B_subset_paths.txt  thinking.py  training_output.txt  update_paths_to_parquet.py  vision_10_0B_subset_paths.txt  vision_1_0B_subset_paths.txt  vision_2_0B_subset_paths.txt  vision_6_4B_subset_paths.txt
lmms_video/cicd/: run_traincicd.sh
lmms_video/configs/: deepspeed_zero3.json  fast_slow_autoregressive.yaml  llava_ov_fast_slow_autoregressive.yaml
lmms_video/docs/: autoregressive_reconstruction.md  frame_mask_and_fast_slow.md  peak_perf.md  train.md
lmms_video/examples/: INTEGRATION_GUIDE.md  config_llava_next_autoregressive.yaml  dllm_train_example.yaml  experiment_configs.yaml  load_from_config_example.yaml  load_from_pretrained_example.yaml  train_with_autoregressive.py
lmms_video/logs/: events.out.tfevents.1760530820.node-0.3056908.0  events.out.tfevents.1760531916.node-0.3075018.0  events.out.tfevents.1760532371.node-0.3082348.0  events.out.tfevents.1760533253.node-0.3103361.0  events.out.tfevents.1760533575.node-0.3115973.0  events.out.tfevents.1760535054.node-0.3147829.0
(+104 files in other folders)
